--- a/styles/architect.css
+++ b/styles/architect.css
@@ -25,6 +25,11 @@
     border: 0;
 
 }
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
 
 /* header styles  */
 header{
@@ -37,11 +42,7 @@ nav{
     align-items: center;
 }
 
-.nav-title{
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
-}
+
 
 nav > ul {
     display: flex;
