--- a/styles/architect.css
+++ b/styles/architect.css
@@ -129,16 +129,29 @@ main{
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
 }
 
+.features-img img{
+    height: 90%;
+    margin-left: 90px;
+}
+
 .ten-years-badge{
     border-radius: 8px;
     background: #FF900E;
     color: #FFF;
     width: 342px;
     padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
 }
 
 .ten-years-badge h2{
     font-size: 4rem;
+    margin: 0;
+}
+
+.ten-years-badge p{
+    font-size: 1.5rem;
 }
 
 /* facts section */
@@ -189,11 +202,23 @@ main{
     }
     nav,
     .teams-container, 
+    .features, 
     .facts-card-container, 
     .sponsors-img-container
     {
         flex-direction: column;
     }
+
+    .features-img img{
+        width: 90%;
+        margin-left: 0;
+    }
+
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
+    }
+
     .teams-img-container{
         grid-template-columns: 1fr;
     }
@@ -211,6 +236,7 @@ main{
         padding: 50px;
     }
     nav, 
+    .features,
     .teams-container, 
     .sponsors-img-container 
      {
