--- a/styles/architect.css
+++ b/styles/architect.css
@@ -194,6 +194,25 @@ main{
     width: 165px;
 }
 
+.footer{
+    display: flex;
+    margin: 100px 240px;
+    width: 1440px;
+    height: 100px;
+    border-radius: 8px;
+    background: #FFF4E7;
+}
+
+.footer-content{
+    color: #424242;
+    justify-content: center;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    padding: 20px 400px;
+}
+
+
 /* responsive media queries */
 /* mobile devise */
 @media screen and (max-width:576px) {
@@ -229,6 +248,16 @@ main{
     .facts-card-container{
         gap: 20px;
     }
+    .footer{
+        margin-top: 20px;
+        margin-left: 0;
+        width: 400px;
+    }
+    .footer-content{
+        text-align: center;
+        padding: 20px 0px;
+        font-size: 15px;
+    }
 }
 /* tablet or medium devise */
 @media screen and (min-width:576px) and (max-width:960px) {
@@ -241,5 +270,13 @@ main{
     .sponsors-img-container 
      {
         flex-direction: column;
+    }
+    .footer{
+        margin-left: 0;
+    }
+    .footer-content{
+        text-align: center;
+        font-size: 20px;
+        padding: 20px 150px;
     }
 }
